# clario

./: .gitignore  DEPLOYMENT_QUICK_REFERENCE.md  HOSTING_SETUP.md  README.md  docker-compose.yml
clario-backend/: .dockerignore  .env.example  .env.production.example  .gitignore  BACKEND_REQUIREMENTS.md  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt  run.py
clario-backend/app/: main.py
clario-backend/app/ai/prompts/: base_agent.md  call_report.md  calm_obserber.md  chaotic_friend.md  chill_overthinker.md  insight_coach.md  older_sibling.md
clario-backend/app/core/: auth.py  config.py  supabase.py
clario-backend/app/routers/: __init__.py  auth.py  sessions.py  settings.py  websocket.py
clario-backend/app/schema/: call_report.py  response.py  session.py  settings.py
clario-backend/app/services/: call_report.py  conversation_history.py  gemini_live.py  settings.py  voice_session.py
clario-backend/supabase/sql/: conversation_history.sql  seed_fake_week_sessions.sql  user_settings.sql  voice_sessions.sql  voice_sessions_add_call_report.sql  voice_sessions_add_duration.sql
clario-frontend/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
clario-frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
clario-frontend/src/components/: Footer.tsx  NavLink.tsx  Navbar.tsx  Plan.tsx  ProtectedRoute.tsx  SessionReportModal.tsx
clario-frontend/src/contexts/: AuthContext.tsx
clario-frontend/src/hooks/: tempCodeRunnerFile.ts  useAuth.tsx  useVoiceJournal.ts
(+13 files in other folders)
