[project]
name = "clario-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "google-genai>=1.69.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "websockets>=16.0",
]
